# apple-calendar-notion-sync

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  sync_calendar.py
cal_notion/: __init__.py  ai.py  analytics.py  cli.py  config.py  daemon.py  launchd.py  lock.py  models.py  nlp.py  notify.py  notion_sync.py  retry.py  sync_engine.py  sync_state.py  web.py
cal_notion/providers/: __init__.py  apple.py  base.py  google.py
tests/: test_ai.py  test_analytics.py  test_lock.py  test_models.py  test_nlp.py  test_notify.py  test_notion_sync.py  test_retry.py  test_sync_engine.py  test_sync_state.py
