[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cal-notion"
version = "0.3.0"
description = "Bidirectional sync between calendar (Apple/Google) and Notion database"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "caldav>=1.3.0",
    "icalendar>=5.0.0",
    "notion-client>=2.2.0",
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
google = [
    "google-auth-oauthlib>=1.0.0",
    "google-api-python-client>=2.0.0",
]

[project.scripts]
cal-notion = "cal_notion.cli:main"

[project.urls]
Homepage = "https://github.com/justinhsu1477/apple-calendar-notion-sync"
Issues = "https://github.com/justinhsu1477/apple-calendar-notion-sync/issues"
